--- a/index.html
+++ b/index.html
@@ -5,3 +5,46 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Web Page</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+
+    <!-- Gallery Section -->
+    <div class="gallery">
+        <!-- Your gallery images will go here -->
+        <img src="image1.jpg" alt="Image 1">
+        <img src="image2.jpg" alt="Image 2">
+        <!-- Add more images as needed -->
+    </div>
+
+    <!-- Quiz Section -->
+    <div class="quiz">
+        <h2>Quiz Title</h2>
+        <form id="quiz-form">
+            <!-- Your quiz questions and options will go here -->
+            <div class="question">
+                <p>Question 1: What is the capital of...?</p>
+                <label>
+                    <input type="radio" name="q1" value="option1"> Option 1
+                </label>
+                <label>
+                    <input type="radio" name="q1" value="option2"> Option 2
+                </label>
+                <!-- Add more options as needed -->
+            </div>
+            <!-- Add more questions as needed -->
+            <button type="button" onclick="submitQuiz()">Submit Quiz</button>
+        </form>
+        <div id="quiz-result"></div> <!-- This is where the quiz result will be displayed -->
+    </div>
+
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+
+</body>
+</html>
