--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Gallery Section -->
     <div class="gallery">
         <!-- Your gallery images will go here -->
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
+        <img src="Images/CCNA1.png" alt="Image 1">
+        <img src="Images/CCNA2.png" alt="Image 2">
         <!-- Add more images as needed -->
     </div>
 
