--- a/menu.html
+++ b/menu.html
@@ -6,32 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <title>Michal Kulej</title>
+
+    <title>Navbar Sidebar Youtube Clone</title>
 </head>
 <body>
-    <div id="navbar-toggle">
-        <a href="javascript:void(0);" class="menu-bars" id="show-menu">
+    <div id="navbar">
+        <a href="#" class="menu-bars" id="show-menu">
             <i class="fas fa-bars"></i>
-        </a>
-        <a href="#">
-            <h1><i class="fab fa-youtube" id="youtube-logo"></i>Michał Kulej</h1>
         </a>
     </div>
     <nav id="nav-menu">
         <ul class="nav-menu-items">
             <div id="navbar-toggle">
-                <a href="javascript:void(0);" class="menu-bars" id="hide-menu">
+                <a href="#" class="menu-bars" id="hide-menu">
                     <i class="fas fa-bars nav-icon"></i>
                 </a>
-                <a href="#">
-                    <h1><i class="fab fa-youtube" id="youtube-logo"></i>Michał Kulej</h1>
-                </a>
+                <a href="#"><h1><i class="fab fa-youtube" id="youtube-logo"></i>Youtube</h1></a>
             </div>
             <hr>
             <div class="nav-section">
-                <li class="nav-text"><a href="index.html"><i class="fas fa-home nav-icon"></i>Home</a></li>
-                <li class="nav-text"><a href="Quiz.html"><i class="fas fa-fire nav-icon"></i>Quiz</a></li>
-                <li class="nav-text"><a href="Gallery.html"><i class="fab fa-youtube nav-icon"></i>Gallery</a></li>
+                <li class="nav-text"><a href="#"><i class="fas fa-home nav-icon"></i>Home</a></li>
+                <li class="nav-text"><a href="#"><i class="fas fa-fire nav-icon"></i>Trending</a></li>
+                <li class="nav-text"><a href="#"><i class="fab fa-youtube nav-icon"></i>Subscriptions</a></li>
             </div>
             <hr>
             <div class="nav-section">
@@ -41,15 +37,6 @@
             </div>
         </ul>
     </nav>
-
-     <!-- Contact Information Section -->
-    <div id="contact-section">
-        <h2>Contact Information</h2>
-        <p>Email: contact@example.com</p>
-        <p>Phone: +1 123-456-7890</p>
-        <p>Address: 123 Main Street, Cityville</p>
-    </div>
-
-    <script src="list.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
